Fix night mode nav bar on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -43,6 +43,11 @@
     color: white;
 }
 
+.night-mode .navbar-menu {
+    background-color: black;
+    color: white;
+}
+
 .night-mode .navbar a {
     color: white;
 }
